Revision history for {{$dist->name}}

{{$NEXT}}

0.0.16    2018-07-25 14:23:36+01:00 Europe/London
 - don't use Data::Printer (@dakkar) (#24)

0.0.15    2018-07-24 13:44:11+01:00 Europe/London
 - fix contents_to_filter_regex (@dakkar) (#23)
 - simpler non-html test (@dakkar) (#23)

0.0.14    2018-07-23 17:18:03+01:00 Europe/London
 - limit munging to appropriate content-types (@dakkar) (#22)
 - allow blocking non-POST methods (@dakkar) (#22)

0.0.13    2018-07-23 12:01:27+01:00 Europe/London
 - Replace $@ with $msg (#19)
 - Add missing use statement (#20)
 - Update Build Status icon/badge
 - Travis: add 5.26 and 5.24 as versions to test with
 - Update Dist::Zilla used in Travis

0.0.12    2017-07-13 06:35:46-04:00 America/New_York
 - Refactor internals to make extensible (PR #17)
 - dzil: use Git::Contributors instead of ContributorsFromGit (PR #18)

0.0.11    2015-09-07 16:44:57+00:00 UTC

 - Allow coderefs in token (pull-request #16)

0.0.10    2015-07-18 23:03:26+01:00 Europe/London
 - add scripts for BuildKite testing
 - dzil: Replace NoTabsTests with Test::NoTabs
 - fix #15: Use magic comment to crowbar in an essential dependency
 - add magic comments for other author dependencies that aren't auto-detected
 - Add *skeleton* POD for methods
   This is a shockingly lazy way for me to get my dist to pass Pod::Coverage tests
 - re-arrange POD in file; so method POD appears in a sensible location
 - add (markdown) section of POD for build status to show (in github/README.mkdn)

0.0.9     2014-10-13 10:15:38+00:00 UTC
 - Optionally allow signed cookies escape token injected into html (pull #14)

0.0.8     2014-09-18 08:01:40+00:00 UTC
 - Add option to set XSRF token cookie as a session cookie (pull #13)

0.0.7     2014-08-28 16:51:04+00:00 UTC
 - Set cookie once we know we have HTML (issue #12)
 - Update POD docs with inject_form_input field docs (pull #10)

0.0.6     2014-08-05 20:47:11+00:00 UTC
 - Pass app() to 'blocked' sub (pull #8)